apps/torrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrent
  labels:
    app: torrent
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: torrent
  template:
    metadata:
      labels:
        app: torrent
    spec:
      containers:
      - name: vpn
        image: bubuntux/nordlynx:2022-04-01 # {"$imagepolicy": "flux-system:nordlynx"}
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          sysctls:
          - name: net.ipv6.conf.all.disable_ipv6
            value: "1"
      - name: torrent
        image: lscr.io/linuxserver/qbittorrent:4.4.2 # {"$imagepolicy": "flux-system:qbittorrent"}
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /downloads
          name: downloads-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: torrent-config
      - name: downloads-volume
        hostPath:
          path: /mnt/downloads
