apps/torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
  labels:
    app: torrent
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: torrent
